K8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-node-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          # Backend API rule with rewrite
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5050
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5050
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5050

          # Frontend rule — no rewrite
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
